[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Character Selection.gd" type="Script" id=1]

[node name="Character Selection" type="Node2D"]
script = ExtResource( 1 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -189.0
margin_top = -69.5
margin_right = 189.0
margin_bottom = 69.5

[node name="Knight" type="Button" parent="HUD/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.0
margin_top = -9.5
margin_right = 29.0
margin_bottom = 10.5
text = "Knight"

[node name="Elf" type="Button" parent="HUD/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -9.5
margin_right = 56.0
margin_bottom = 10.5
text = "Elf"

[node name="Wizard" type="Button" parent="HUD/Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -10.0
margin_bottom = 10.0
text = "Wizard"
[connection signal="button_up" from="HUD/Control/Knight" to="." method="_on_Knight_button_up"]
[connection signal="button_up" from="HUD/Control/Elf" to="." method="_on_Elf_button_up"]
[connection signal="button_up" from="HUD/Control/Wizard" to="." method="_on_Wizard_button_up"]
